# buildify

./: Cargo.toml  README.md
src/: builder_generator.rs  constants.rs  field.rs  field_rule.rs  field_rule_test.rs  field_test.rs  field_type_segment.rs  generator.rs  lib.rs
src/test_utils/: asserts.rs  fixtures.rs  mod.rs
